# Image-Guided-Robotic-Navigation

./: README.md
PathPlanningV1/: CMakeLists.txt
PathPlanningV1/PathPlanningV1/: CMakeLists.txt  PathPlanningV1.py
PathPlanningV1/PathPlanningV1/Resources/UI/: PathPlanningV1.ui
URDF/: 6dof_final_V4.urdf
move_robot_to_pose/: move_robot_to_pose.py
moveit_config3/: .setup_assistant  CMakeLists.txt  package.xml
moveit_config3/config/: 6dof_robot.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  stomp_planning.yaml
moveit_config3/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
